[package]
name = "ra_minesweeper_rs"
version = "0.1.0"
edition = "2021"
categories = ["gui", "wasm", "web-programming"]
keywords = ["yew", "wasm", "wasm-bindgen", "web", "starter", "template"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
yew = "0.16"
rand = "0.8.5"
iced = "0.4"

getrandom = { version = "0.2", features = ["js"] }

